--- a/notebooks/rawmsa_disorder.ipynb
+++ b/notebooks/rawmsa_disorder.ipynb
@@ -1,39 +1,37 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "92567618-00a3-459b-81e2-d734799b608b",
+   "cell_type": "markdown",
+   "id": "d3f33a8b-eb07-4c4d-bb97-1ee9ceb5e0a1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " \n",
-      "                                             _ _                   _           \n",
-      "                                             | (_)                 | |          \n",
-      " _ __ __ ___      ___ __ ___  ___  __ _   __| |_ ___  ___  _ __ __| | ___ _ __ \n",
-      " | '__/ _` \\ \\ /\\ / / '_ ` _ \\/ __|/ _` | / _` | / __|/ _ \\| '__/ _` |/ _ \\ '__|\n",
-      " | | | (_| |\\ V  V /| | | | | \\__ \\ (_| || (_| | \\__ \\ (_) | | | (_| |  __/ |   \n",
-      " |_|  \\__,_| \\_/\\_/ |_| |_| |_|___/\\__,_| \\__,_|_|___/\\___/|_|  \\__,_|\\___|_|   \n",
-      "                                     ______                                    \n",
-      "                                     |______|                                   \n",
-      "                     \n"
-     ]
-    }
-   ],
    "source": [
-    "print(\" \\n \\\n",
-    "                                            _ _                   _           \\n \\\n",
-    "                                            | (_)                 | |          \\n \\\n",
-    "_ __ __ ___      ___ __ ___  ___  __ _   __| |_ ___  ___  _ __ __| | ___ _ __ \\n \\\n",
-    "| '__/ _` \\ \\ /\\ / / '_ ` _ \\/ __|/ _` | / _` | / __|/ _ \\| '__/ _` |/ _ \\ '__|\\n \\\n",
-    "| | | (_| |\\ V  V /| | | | | \\__ \\ (_| || (_| | \\__ \\ (_) | | | (_| |  __/ |   \\n \\\n",
-    "|_|  \\__,_| \\_/\\_/ |_| |_| |_|___/\\__,_| \\__,_|_|___/\\___/|_|  \\__,_|\\___|_|   \\n \\\n",
-    "                                    ______                                    \\n \\\n",
-    "                                    |______|                                   \\n \\\n",
-    "                    \")"
+    "# <font color='#2684ff'>rawMSA_disorder: a server to predict protein disorder</font>\n",
+    "\n",
+    "<img src=\"https://github.com/clami66/AF_unmasked/raw/main/fig/header.png\" height=\"200\">\n",
+    "\n",
+    "This server allows to run rawMSA_disorder.\n",
+    "\n",
+    "This version of rawMSA_disorder relies on MMseqs2 alignments, run by the [ColabFold](https://github.com/sokrypton/ColabFold) MSA server. Some of the code on this notebook is also based or taken from the ColabFold notebook.\n",
+    "\n",
+    "<font color='#2684ff'>**References**</font>\n",
+    "\n",
+    "If you use this version of rawMSA_disorder in your research, consider citing:\n",
+    "\n",
+    "- Mirabello et al. \"rawMSA: End-to-end Deep Learning using raw Multiple Sequence Alignments\" [10.1371/journal.pone.0220182](https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0220182)\n",
+    "- Mirdita et al. \"ColabFold: making protein folding accessible to all\" [Nature Methods volume 19, pages 679–682 (2022)](https://www.nature.com/articles/s41592-022-01488-1)\n",
+    "\n",
+    "## <font color='#2684ff'>Instructions</font>\n",
+    "\n",
+    "The job is configured and launched from the side menu on the left. \n",
+    "\n",
+    "1. <font color='#2684ff'> **Select a name for your job**</font>. Confirm by clicking on the button that will appear or press enter. If you wish to run an example, use the slide button on top and an example sequence from CAID will be used.\n",
+    "1. <font color='#2684ff'> **Upload sequence**</font>. A FASTA file containing a single protein sequence to predict.\n",
+    "1. <font color='#2684ff'> **Press the \"Predict disorder\" button**</font>\n",
+    "1. <font color='#2684ff'> **Check and download outputs**</font>. Results will appear in this window. To download the predictions, click on \"Output files\" at the bottom of the side menu.\n",
+    "\n",
+    "## <font color='#2684ff'>Outputs</font>\n",
+    "\n",
+    "Outputs will appear below:\n"
    ]
   },
   {
@@ -137,7 +135,7 @@
     "        stop_on_error=True\n",
     ")\n",
     "\n",
-    "test_checkbox = mr.Checkbox(value=False, label=\"Check the box to run with test data\")\n",
+    "test_checkbox = mr.Checkbox(value=False, label=\"Slide button to run with test protein (P53_HUMAN)\")\n",
     "is_test = test_checkbox.value"
    ]
   },
@@ -436,6 +434,17 @@
     "    ax3.imshow(res_2.T, aspect='auto', cmap='binary')\n",
     "    plt.tight_layout()\n",
     "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3cdf09e-2a3a-499b-a640-4b7b80f0b977",
+   "metadata": {},
+   "source": [
+    "## <font color='#2684ff'>Download results </font>\n",
+    "\n",
+    "Click on the button at the bottom of the menu:\n",
+    "\n"
    ]
   }
  ],
