Minor improvements and seperate plot module in Netutils

--- a/notebooks/rawmsa_disorder.ipynb
+++ b/notebooks/rawmsa_disorder.ipynb
@@ -38,19 +38,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ca59c215-3dd7-42e6-8ca9-dfbea30047de",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-01-22 13:21:59.988087: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import mercury as mr\n",
     "\n",
@@ -63,6 +54,7 @@
     "from pathlib import Path\n",
     "cwd = Path.cwd()\n",
     "base_path = \"/home/clami66/rawmsa_disorder\"\n",
+    "#base_path = \"/Users/yogka98/projects_local/rawmsa_disorder/\"\n",
     "sys.path.insert(0, f\"{base_path}/docker/\")\n",
     "\n",
     "import argparse\n",
@@ -79,7 +71,7 @@
     "import numpy as np\n",
     "from numpy import newaxis\n",
     "import matplotlib.pyplot as plt\n",
-    "from utils.NetUtils import CustomMetrics, DataProcessor, a3m2aln, aln2num, pad_or_trim_array\n",
+    "from utils.NetUtils import CustomMetrics, DataProcessor, a3m2aln, aln2num, pad_or_trim_array, plot_results\n",
     "from colabfold.batch import get_msa_and_templates, msa_to_str\n",
     "from colabfold.utils import DEFAULT_API_SERVER, get_commit\n",
     "\n",
@@ -98,39 +90,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "83f4373f-c264-4f28-ae94-d4a63424dd41",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/mercury+json": "{\n    \"widget\": \"App\",\n    \"title\": \"rawMSA_disorder\",\n    \"description\": \"\",\n    \"show_code\": false,\n    \"show_prompt\": false,\n    \"output\": \"app\",\n    \"schedule\": \"\",\n    \"notify\": \"{}\",\n    \"continuous_update\": true,\n    \"static_notebook\": false,\n    \"show_sidebar\": true,\n    \"full_screen\": true,\n    \"allow_download\": false,\n    \"allow_share\": true,\n    \"stop_on_error\": true,\n    \"model_id\": \"mercury-app\",\n    \"code_uid\": \"App.0.50.110.4-randda729c4b\"\n}",
-      "text/html": [
-       "<h3>Mercury Application</h3><small>This output won't appear in the web app.</small>"
-      ],
-      "text/plain": [
-       "mercury.App"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/mercury+json": "{\n    \"widget\": \"Checkbox\",\n    \"value\": false,\n    \"label\": \"Check the box to run with test data\",\n    \"model_id\": \"a9eb849ee0514f608fbec1a4874bafad\",\n    \"code_uid\": \"Checkbox.0.50.70.17-randb63627c1\",\n    \"url_key\": \"\",\n    \"disabled\": false,\n    \"hidden\": false\n}",
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a9eb849ee0514f608fbec1a4874bafad",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "mercury.Checkbox"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# config\n",
     "trained_models = f\"{base_path}/docker/data/models\"\n",
@@ -151,15 +114,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "5ffff6ab-9bf1-4d37-a107-7fefcdc9420e",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "application/mercury+json": "{\n    \"widget\": \"Text\",\n    \"value\": \"\",\n    \"sanitize\": true,\n    \"rows\": 1,\n    \"label\": \"Job name\",\n    \"model_id\": \"3aaf672174a5402a86be8d41945cde26\",\n    \"code_uid\": \"Text.0.50.78.1-rande17f2a1c\",\n    \"url_key\": \"\",\n    \"disabled\": false,\n    \"hidden\": false\n}",
+      "application/mercury+json": {
+       "code_uid": "Text.0.50.78.2-rand9d6c534a",
+       "disabled": true,
+       "hidden": false,
+       "label": "Job name",
+       "model_id": "60fef6cd4eb14cdcad5e5d4074fcf717",
+       "rows": 1,
+       "sanitize": true,
+       "url_key": "",
+       "value": "9F36FACD675A9AD1",
+       "widget": "Text"
+      },
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3aaf672174a5402a86be8d41945cde26",
+       "model_id": "60fef6cd4eb14cdcad5e5d4074fcf717",
        "version_major": 2,
        "version_minor": 0
       },
@@ -180,24 +154,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "3b0555bf-928f-4381-8089-1d66dab2766a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/mercury+json": "{\n    \"widget\": \"OutputDir\",\n    \"model_id\": \"output-dir\",\n    \"code_uid\": \"OutputDir.0.50.18.1-rand79c2a3bc\"\n}",
-      "text/html": [
-       "<h3>Output Directory</h3><small>This output won't appear in the web app.</small>"
-      ],
-      "text/plain": [
-       "mercury.OutputDir"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n",
@@ -210,26 +170,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "90506a70-90d3-4c46-8852-69c59f78f63c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/mercury+json": "{\n    \"widget\": \"File\",\n    \"max_file_size\": \"1MB\",\n    \"label\": \"Upload a .fasta file for one target protein\",\n    \"model_id\": \"b35dd991227241b48cdde2350cc39842\",\n    \"code_uid\": \"File.0.50.74.5-rand92468f39\",\n    \"disabled\": false,\n    \"hidden\": false\n}",
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b35dd991227241b48cdde2350cc39842",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "mercury.File"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# add file upload widget\n",
     "\n",
@@ -267,21 +211,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "86bc8c82-8651-459f-bb18-5b9d9849cfda",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fasta sequences:\n",
-      ">12E8_2\n",
-      "EVQLQQSGAEVVRSGASVKLSCTASGFNIKDYYIHWVKQRPEKGLEWIGWIDPEIGDTEYVPKFQGKATMTADTSSNTAYLQLSSLTSEDTAVYYCNAGHDYDRGRFPYWGQGTLVTVSAAKTTPPSVYPLAPGSAAQTNSMVTLGCLVKGYFPEPVTVTWNSGSLSSGVHTFPAVLQSDLYTLSSSVTVPSSTWPSETVTCNVAHPASSTKVDKKIVPRD\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def is_fasta(path):\n",
     "    records = list(SeqIO.parse(path, \"fasta\"))\n",
@@ -320,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "94706ade-ee4f-46a0-90ae-b31ff0c99b4b",
    "metadata": {},
    "outputs": [],
@@ -399,22 +332,8 @@
     "    end_time = time.time()\n",
     "    exec_times.append(end_time - start_time)\n",
     "    \n",
-    "    fig = plt.figure(figsize=(10,10))\n",
-    "    gs = fig.add_gridspec(10) \n",
-    "    \n",
-    "    # Define subplots with unequal sizes\n",
-    "    ax1 = fig.add_subplot(gs[:8]) \n",
-    "    ax2 = fig.add_subplot(gs[8]) \n",
-    "    ax3 = fig.add_subplot(gs[9]) \n",
-    "    \n",
-    "    res_1 = np.array(logits_positive).reshape(-1,1)\n",
-    "    res_2 = np.array(y_binary).reshape(-1,1)\n",
-    "    \n",
-    "    ax1.imshow(X[0].T, aspect='auto', cmap='tab20b')\n",
-    "    ax2.imshow(res_1.T, aspect='auto' , vmin=0, vmax=1)\n",
-    "    ax3.imshow(res_2.T, aspect='auto', cmap='binary')\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()"
+    "    plot_results(X, logits_positive, y_binary, jobname)\n",
+    "    \n"
    ]
   },
   {
@@ -437,7 +356,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "rawmsadisorder",
    "language": "python",
    "name": "python3"
   },
@@ -451,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
