--- a/notebooks/rawmsa_disorder.ipynb
+++ b/notebooks/rawmsa_disorder.ipynb
@@ -53,8 +53,7 @@
     "\n",
     "from pathlib import Path\n",
     "cwd = Path.cwd()\n",
-    "base_path = \"/home/clami66/rawmsa_disorder\"\n",
-    "#base_path = \"/Users/yogka98/projects_local/rawmsa_disorder/\"\n",
+    "base_path = os.getenv(\"RAWMSA_PATH\")\n",
     "sys.path.insert(0, f\"{base_path}/docker/\")\n",
     "\n",
     "import argparse\n",
@@ -114,37 +113,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "5ffff6ab-9bf1-4d37-a107-7fefcdc9420e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/mercury+json": {
-       "code_uid": "Text.0.50.78.2-rand9d6c534a",
-       "disabled": true,
-       "hidden": false,
-       "label": "Job name",
-       "model_id": "60fef6cd4eb14cdcad5e5d4074fcf717",
-       "rows": 1,
-       "sanitize": true,
-       "url_key": "",
-       "value": "9F36FACD675A9AD1",
-       "widget": "Text"
-      },
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "60fef6cd4eb14cdcad5e5d4074fcf717",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "mercury.Text"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "rand_id = \"\".join(random.choice('0123456789ABCDEF') for i in range(16))\n",
     "jobname = mr.Text(value=rand_id, label=\"Job name\", rows=1, disabled=True)\n",
@@ -192,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "d5332a14-01d0-46ff-85e9-13f023e3cfcc",
    "metadata": {},
    "outputs": [],
@@ -356,7 +328,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "rawmsadisorder",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -370,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.20"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
